--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -171,6 +171,8 @@ p {
   .about-heading .about-heading-img {
     position: relative;
     z-index: 0;
+    -webkit-transform: scaleX(1.1);
+    transform: scaleX(1.1);
   }
   .about-heading .about-heading-content {
     margin-top: -5rem;
@@ -196,6 +198,11 @@ p {
     margin-top: -3rem;
     max-width: 50vw;
   }
+}
+
+.leadershape {
+  background: #5e3829;
+  padding: 50px 150px;
 }
 
 .list-hours {
