--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,6 +3,7 @@
     .about-heading-img {
       position: relative;
       z-index: 0;
+      transform: scaleX(1.1);
     }
     .about-heading-content {
       margin-top: -5rem;
