--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -182,20 +182,18 @@ p {
     position: relative;
     z-index: 1;
   }
-}
 
-@media (min-width: 992px) {
-  .product-item .product-item-title {
+  .experience .experience-title {
     position: relative;
     z-index: 1;
     margin-bottom: -3rem;
   }
-  .product-item .product-item-img {
+  .experience .experience-img {
     position: relative;
     z-index: 0;
     max-width: 60vw;
   }
-  .product-item .product-item-description {
+  .experience .experience-description {
     position: relative;
     z-index: 1;
     margin-top: -3rem;
@@ -273,4 +271,20 @@ p {
 
 .wheat-text {
   color: wheat;
+}
+
+.project {
+  margin-top: 25px;
+  text-align: center;
+}
+
+.project .project-image {
+  width: 80%;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+.project h3 {
+  font-size: 20px;
+  font-weight: bold;
 }
