--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -302,3 +302,18 @@ p {
   width: 100%;
   filter: brightness(0.8);
 }
+
+.blog-article .featured-header {
+  display: none;
+}
+
+.blog-article.featured .featured-header {
+  border: none;
+  display: block;
+  font-size: 1.5rem;
+  background-color: rgba(94, 56, 41, 0.2);
+}
+
+.blog-article.featured .article-excerpt {
+  font-size: 1rem;
+}
