--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -325,3 +325,15 @@ p {
 .text-justify-p p {
   text-align: justify;
 }
+
+.landing {
+  text-shadow: 0 0 5rem rgba(0, 0, 0, 1);
+}
+
+.landing h1 {
+  font-size: 5rem;
+}
+
+.landing p {
+  font-size: 1.5rem;
+}
